# plant-telemetry

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
.devcontainer/api-server/: devcontainer.json  docker-compose.override.yml
.devcontainer/mosquitto-consumer/: devcontainer.json  docker-compose.override.yml
.devcontainer/scripts/: check-running-service.sh
.devcontainer/webapp/: devcontainer.json  docker-compose.override.yml
.github/workflows/: lint.yml  typecheck.yml
api-server/: Dockerfile  pyproject.toml
api-server/src/api_server/: main.py
api-server/src/api_server/config/: exceptions.py
api-server/src/api_server/database/: sql_client.py
mosquitto-broker/: Dockerfile  entrypoint.sh
mosquitto-broker/config/: mosquitto.conf
mosquitto-consumer/: Dockerfile  pyproject.toml
mosquitto-consumer/.devcontainer/: devcontainer.json  docker-compose.override.yml
mosquitto-consumer/src/mosquitto_consumer/: cli.py  mqtt_consumer_client.py
mosquitto-consumer/src/mosquitto_consumer/config/: constants.py  enums.py  exceptions.py  logs.py  settings.py
mosquitto-consumer/src/mosquitto_consumer/database/: models.py  schema.sql  sql_client.py
mosquitto-consumer/src/mosquitto_consumer/utils/: add_plants.py  exceptions.py  plants_utils.py
mosquitto-producer/: mosquitto-producer.ino
mosquitto-producer-esp8266/: mosquitto-producer.ino
mosquitto-producer/helper-scripts/: sensor-reading-monitor.ino
postgres/: helper-scripts.sql
postgres/database/: models.py
webapp/: Dockerfile  pyproject.toml
webapp/.streamlit/: config.toml
webapp/src/webapp/: 1_overview.py  Homepage.py  main.py  overview.py
webapp/src/webapp/components/: favicon.py  icon_link.py  layout.py  page_header.py  ui.py
webapp/src/webapp/config/: constants.py  exceptions.py  logs.py  settings.py
webapp/src/webapp/database/: sqlalchemy_client.py
webapp/src/webapp/pages/: 1_Monitoring.py
webapp/src/webapp/public/icons/: icons.py
webapp/src/webapp/styles/: main.css
webapp/src/webapp/utils/: __init__.py  file_management.py  icons.py  load_page_elements.py  load_styles.py
