[project]
name = "mosquitto-consumer"
version = "0.1.0"
description = "Receives data from mosquitto and puts into postgres"
requires-python = ">=3.12"
dependencies = [
    "paho-mqtt>=2.1.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "pyrefly>=0.16.2",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[tool.ruff]
lint.select = [
    "E",
    "F",
    "W",
    "N",
    "I",
    "TRY",
    "D",
    "ANN"
]
lint.ignore = [
    "D100",
    "D104"
]

[tool.pyrefly]
python_version="3.12"
